# blue-green

./: .env.local  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.bash  manage.py  pyproject.toml  pytest.ini  set-up-env.test.sh
ag_smile_leaseback_crm_back/: asgi.py  settings.py  urls.py  wsgi.py
codebuild/: buildspec_django.yml  buildspec_nginx.yml
containers/django/: Dockerfile.stg  entrypoint.sh
containers/mysql/: init.sql
containers/nginx/: Dockerfile.dev  Dockerfile.stg  nginx.dev.conf  nginx.stg.conf
crm/: filters.py  models.py  permission.py  urls.py
crm/fixtures/: crm.json
crm/serializers/: address.py  alb_anti_social_check.py  anti_social_check_result.py  application_info.py  bank_account.py  building.py  building_info.py  customer.py  customer_negotiation_history.py  earnings_sim.py  estate.py  estate_certificate.py  evaluate_company.py  evaluate_company_evaluation.py  evaluation.py  evaluation_result.py  evaluation_standard.py  family.py  interview.py  interview_item.py  introduction_company.py  kouku.py  land.py  land_certificate.py  land_data.py  loan.py  otsuku.py  pet.py  promotion_method.py  promotion_result.py  prospect_customer.py  provisional_customer.py  purchase_survey.py  user.py  workplace_info.py
crm/templates/: refuse_mail.html  refuse_mail.txt  reset_password.html  reset_password.txt  welcome_email.html  welcome_email.txt
crm/tests/: conftest.py
crm/utils/: base_view_set.py  mail.py  provisional_filter_backend.py  token.py
crm/views/: application_info.py  (+31 more)
ecs/: policy.json  taskdef.stg.json
(+1 files in other folders)
